@startuml heapuml

class BinaryTree {
    # Node root
    + getLeftSubtree()
    + getRightSubtree()
    + getData()
    + isLeaf()
    + toString()
    + readBinaryTree()
}

class Node {
    # E data
    # Node parent
    # Node right
    # Node left
} 

class BinaryHeap {
    - int size
    + insert()
    + getMin()
    + extraxtMin()
    + incrementKey()
    + merge()
    + clear()
    + size()
    + isEmpty()
    + contains()
}


BinaryTree <-- BinaryHeap

BinaryTree o-- Node

@enduml